--- a/src/app/addcustomer/addcustomer.component.html
+++ b/src/app/addcustomer/addcustomer.component.html
@@ -1,3 +1,26 @@
-<p>
-  addcustomer works!
-</p>
+<ion-header>
+    <ion-menu-button></ion-menu-button>
+    <ion-title>Add Customers</ion-title>
+</ion-header>
+
+<ion-content>
+<ion-item>
+  <ion-input   placeholder="enter id" [(ngModel)]=customers.id></ion-input>
+</ion-item>
+<ion-item>
+  <ion-input placeholder="enter name" [(ngModel)]=customers.name></ion-input>
+</ion-item>
+<ion-item>
+  <ion-input placeholder="enter email" [(ngModel)]=customers.email></ion-input>
+</ion-item>
+<ion-item>
+  <ion-input  placeholder="enter phone" [(ngModel)]=customers.phone></ion-input>
+</ion-item>
+<ion-item>
+  <ion-input   placeholder="enter address" [(ngModel)]=customers.address></ion-input>
+</ion-item>
+
+  <ion-button  (click)="addCustomer()">Add Customer  </ion-button>
+
+
+</ion-content>
