--- a/src/app/editcustomer/editcustomer.component.html
+++ b/src/app/editcustomer/editcustomer.component.html
@@ -19,7 +19,7 @@
       <ion-input   placeholder="enter address" [(ngModel)]=customer.address></ion-input>
     </ion-item>
     
-      <ion-button  (click)="update()">Update Customer  </ion-button>
+      <ion-button  (click)="updateCustomer(customer)">Update Customer  </ion-button>
     
     
     </ion-content>
