--- a/src/app/listcustomer/listcustomer.component.html
+++ b/src/app/listcustomer/listcustomer.component.html
@@ -19,6 +19,7 @@
         <ion-icon name="pin"></ion-icon>{{ c.address }}
       </ion-card-header>
   </ion-card>
+  <ion-button (click)="deleteAllCustomers()">Delete All Customers</ion-button>
 </ion-content>
  
  
