--- a/src/app/listcustomer/listcustomer.component.html
+++ b/src/app/listcustomer/listcustomer.component.html
@@ -8,7 +8,7 @@
  <ion-card-header>
   
   <ion-card-title><ion-icon name="contact"></ion-icon>{{ customer.id }} {{ customer.name }}
-    <ion-icon name="create"(click)="onEdit(customer.id)"></ion-icon>
+    <ion-icon name="create" color="primary" (click)="onEdit(customer.id)"></ion-icon>
     <ion-icon  name="trash" color="danger" (click)="deleteCustomer(customer)"></ion-icon>
   </ion-card-title> <br>
   
